--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         </div>
     </main>
     <h2 id="sec1"> mi titulo 1</h2>
-    <section id="seccion1" class="seccion"></section>
-    <div class="caja caja1">caja1</div>
-    <div class="caja caja2">caja2</div>
-    <div class="caja caja3">caja3</div>
-    <div class="caja caja4">caja4</div>
-    <div class="caja caja5">caja5</div>
+    <section id="seccion1" class="seccion">
+        <div class="caja caja1">caja1</div>
+        <div class="caja caja2">caja2</div>
+        <div class="caja caja3">caja3</div>
+        <div class="caja caja4">caja4</div>
+        <div class="caja caja5">caja5</div>
+    </section>
     <h2 id="sec2"> mi titulo 2</h2>
     <section id="seccion2" class="seccion"></section>
     <h2 id="sec3"> mi titulo 3</h2>
